# nitrous

./: CMakeLists.txt  LICENSE  README.md  checkstem.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  statuswidget.cpp  statuswidget.h  stemplayerdetector.cpp  stemplayerdetector.h
resources/: icon.rc  resources.qrc
src/: about.cpp  about.h  about_window.cpp  about_window.h  browser.cpp  browser.h  checkstem.cpp  config.cpp  config.h  config_data.cpp  config_data.h  config_file_handler.cpp  config_file_handler.h  config_load.cpp  config_load.h  config_save.cpp  config_save.h  config_setup_ui.cpp  config_setup_ui.h  config_update.cpp  config_update.h  connect.cpp  connect.h  console.cpp  console.h  content_browser.cpp  content_browser.h  current_directory.cpp  current_directory.h  device_connection.cpp  device_connection.h  directory.cpp  directory.h  json_parser.cpp  json_parser.h  main.cpp  main.h  main.ui  main_window.cpp  main_window.h  (+12 more)
